feat 1.优化实体捕获 2.优化实体过滤 3.移除未使用的方法 4.优化垃圾箱界面操作 5.优化清理倒计时配置 6.添加客户端配置修改指令 7.添加捕获玩家的虚拟权限